:fix: fixed bug with margin on mobiles

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -3,9 +3,8 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins:300,500,600&display=swap&subset=latin-ext');
 html {
     box-sizing: border-box;
-    // background: $dark-violet;
-    border: none;
-    scroll-behavior: smooth
+    scroll-behavior: smooth;
+    width: 100%;
 }
 
 *,
@@ -15,12 +14,11 @@ html {
 }
 
 body {
-    // display: flex;
-    // justify-content: center;
+    min-width: 100vw;
+    width: 100%;
     font-family: 'Poppins', sans-serif;
     border: solid 1rem $dark-violet;
-    // padding: 0 7rem 0;
-    @media (max-width: $mobile), (max-width: $desktop) {
+    @media (max-width: $desktop) {
         border: none;
     }
 }
@@ -40,7 +38,7 @@ body {
         padding: 120px 3rem 125px;
     }
     @media(max-width: $mobile) {
-        margin: 0rem;
+        margin: 0;
         padding: 1rem;
         padding-top: 6rem;
     }
@@ -67,7 +65,7 @@ body {
     }
     @media(max-width: $mobile) {
         padding: 1rem;
-        margin: 1rem;
+        margin: 0;
     }
     @media(max-width: 1400px) {
         padding: 0 3rem 200px;
@@ -162,7 +160,10 @@ body {
     }
     &__content {
         margin: 3rem;
-        @media(max-width: 310px) {
+        @media(max-width: 400px) {
+            margin: 2rem;
+        }
+        @media(max-width: 365px) {
             margin: 1rem;
         }
     }
@@ -174,7 +175,6 @@ body {
         color: $grey;
     }
     &__footer {
-        // bottom: 0;
         display: flex;
         justify-content: flex-end;
         padding: 1rem 3rem;
@@ -419,7 +419,6 @@ body {
     }
     @media(max-width: $mobile) {
         padding: 1rem;
-        margin: 1rem;
     }
 }
 
